--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
+    "react-fast-marquee": "^1.3.1",
     "react-icons": "^4.3.1",
     "react-loading-skeleton": "^3.0.3",
     "react-qr-code": "^2.0.5",
