--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-icons": "^4.3.1",
     "react-loading-skeleton": "^3.0.3",
     "react-qr-code": "^2.0.5",
+    "react-reveal": "^1.2.2",
     "styled-jsx-plugin-postcss": "^4.0.1"
   },
   "devDependencies": {
