Home : update banner, add portfolio marquee

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-loading-skeleton": "^3.0.3",
     "react-qr-code": "^2.0.5",
     "react-reveal": "^1.2.2",
-    "styled-jsx-plugin-postcss": "^4.0.1"
+    "styled-jsx-plugin-postcss": "^4.0.1",
+    "tippy.js": "^6.3.7"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.0.9",
