--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "overmind-react": "^29.0.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-fast-marquee": "^1.3.1",
     "react-icons": "^4.3.1",
     "react-loading-skeleton": "^3.0.3",
+    "react-player": "^2.10.0",
     "react-qr-code": "^2.0.5",
     "react-reveal": "^1.2.2",
     "styled-jsx-plugin-postcss": "^4.0.1",
