--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^17.0.2",
     "react-fast-marquee": "^1.3.1",
     "react-icons": "^4.3.1",
+    "react-iframe": "^1.8.0",
     "react-loading-skeleton": "^3.0.3",
     "react-player": "^2.10.0",
     "react-qr-code": "^2.0.5",
